<resources>
    <string name="app_name">MyApplication</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Login Panel</string>
    <string name="adminFragmentLabel">Administrator Panel</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Log In!</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="manualString">Hello, I am a manually set-up string!</string>
    <string name="myString">Change me!</string>
    <string name="WrongInputText">Wrong Input!</string>
    <string name="loginTitle">Login Panel</string>
    <string name="usernameTitle">Name: </string>
    <string name="passwordTitle">Passwort: </string>
    <string name="adminStatus">Admin: </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adminPanelTitle">Admin Panel</string>
    <string name="sAnlegen">Sachbearbeiter Erfassen</string>
    <string name="sEditieren">Sachbearbeiter Editieren</string>
    <string name="sLoeschen">Sachbearbeiter Löschen</string>
    <string name="fZurodnen">Fortbildung Zuordnen</string>
    <string name="fZuordnungLoeschen">Fortbildungszuordnung Löschen</string>
    <string name="sachbearbeiterErfassenTitle">Sachbearbeiter Erfassen</string>
    <string name="nameDefault">Default</string>
    <string name="passwordDefault">default1</string>
    <string name="erfassenTitle">Erfassen!</string>
    <string name="abbruch">Abbruch</string>
    <string name="sEditierenNameTitle">Neuer Name</string>
    <string name="sEditierenPasswordTitle">Neues Passwort</string>
    <string name="sEditierenAdminstatusTitle">Neuer Adminstatus</string>
    <string name="sEditierenSpinnerTitle">Sachbearbeiter: </string>
    <string name="sEditierenButtonTitle">Editieren!</string>
    <string name="sachbearbeiterTitle">Sachbearbeiter:</string>
    <string name="sLoeschenBtnTitle">Löschen!</string>
</resources>