<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminFragmentAS">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="144dp"
            android:text="@string/adminPanelTitle"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.379">

            <Button
                android:id="@+id/sAnlegenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sAnlegen" />

            <Button
                android:id="@+id/sEditierenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sEditieren" />

            <Button
                android:id="@+id/sLoeschenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sLoeschen" />

            <Button
                android:id="@+id/fZuordnenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fZurodnen" />

            <Button
                android:id="@+id/fZuordnungLoeschenBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fZuordnungLoeschen" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>